# learn_dealii

gpu/: CMakeLists.txt  vector.cu
matrixfree/: CMakeLists.txt  main.cc  test_likwid.c
step-12b/: step-12b.cc
step-6/: CMakeLists.txt  my-step-6.cc
